--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <hr class="row"/>
         <p class="bio"> 
         As a Solution Manager I've been involved in a lot of engagement projects and contributed to the signings of several long term outsourcing contracts in the value of 150+ Mio EUR.
-        A-5-year outlook is to become an experienced full-stack web developer. The first milestone has been to graduate from the coding education program. I'am looking for new opportunities in the web development domain. Read more about my skills below. ...
+        I'am looking for new opportunities in the digital and application domain. Read more about my newly aquired skills below. ...
         </p>
       </div>
     </div>
